--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -35,6 +35,7 @@
       }
 
       & img {
+        object-fit: cover;
         width: 115%;
         height: 100%;
 
